# communique

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  communique.usage.kdl  hk.pkl  mise.toml  release-plz.toml
.github/workflows/: auto-merge-release.yml  autofix.yml  ci.yml  docs.yml  lint.yml  release-plz.yml  release.yml  zizmor.yml
42/7d4e76cb81/: metadata.json
42/7d4e76cb81/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
a6/9b1d7ff20e/: metadata.json
a6/9b1d7ff20e/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/.vitepress/theme/: banner.css  custom.css  index.ts
docs/cli/: commands.json  generate.md  index.md  init.md  sponsors.md
docs/guide/: configuration.md  getting-started.md  github-actions.md
fb/1a07c18411/: metadata.json
fb/1a07c18411/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
src/: agent.rs  anthropic.rs  cli.rs  config.rs  error.rs  generate.rs  git.rs  github.rs  links.rs  llm.rs  main.rs  output.rs  prompt.rs  retry.rs  test_helpers.rs  usage.rs
src/providers/: anthropic.rs  mod.rs  openai.rs
src/tools/: get_commits.rs  get_issue.rs  get_pr.rs  get_pr_diff.rs  git_show.rs  grep.rs  list_files.rs  mod.rs  read_file.rs  submit_release_notes.rs
tests/: integration.rs
