[package]
name = "communique"
version = "0.1.0"
edition = "2024"
description = "Editorialized release notes powered by AI"
repository = "https://github.com/jdx/communique"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
regex = "1"
log = "0.4"
clap_usage = "2"
clx = "1"
console = "0.16"
env_logger = "0.11"
toml = "0.8"
xx = "2"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
